Work on live CDLC search

--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -7,6 +7,7 @@
 @import 'components/table';
 @import 'components/forms';
 @import 'components/rating';
+@import 'components/loaders';
 
 @import 'layout/navigation';
 @import 'layout/container';
