--- a/resources/views/ratings/index.twig
+++ b/resources/views/ratings/index.twig
@@ -24,9 +24,9 @@
 		<tbody>
 		{% for rating in ratings %}
 			<tr>
-				<td>{{ rating.track.artist }}</td>
-				<td>{{ rating.track.name }}</td>
-				<td>{{ rating.track.tracker.name }}</td>
+				<td>{{ rating.track.artist|raw }}</td>
+				<td>{{ rating.track.name|raw }}</td>
+				<td>{{ rating.track.tracker.name|raw }}</td>
 				<td>{{ boolean(rating.normalized_volume) }}</td>
 				<td>{{ boolean(rating.presilence) }}</td>
 				<td>{{ boolean(rating.playable) }}</td>
