Add user avatar

--- a/resources/views/_partials/navigation.twig
+++ b/resources/views/_partials/navigation.twig
@@ -16,7 +16,11 @@
 			<ul class="nav navbar-nav navbar-right">
 				{% if Auth.check() %}
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ current_user.name }} <span class="caret"></span></a>
+						<img class="img-circle" src="{{ current_user.avatar() }}" alt="{{ current_user.name }}" />
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							{{ current_user.name }}
+							<span class="caret"></span>
+						</a>
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="{{ URL.route('ratings.index') }}">My ratings</a></li>
 							<li><a href="{{ URL.route('auth.logout') }}">Logout</a></li>
