--- a/resources/assets/sass/layout/_navigation.scss
+++ b/resources/assets/sass/layout/_navigation.scss
@@ -5,6 +5,20 @@
 		opacity: 0.55;
 	}
 
+	.dropdown {
+		img {
+			display: inline-block;
+			width: 4rem;
+			margin: 1rem 0;
+			float: left;
+			box-shadow: 0 0 0 5px rgba(black, 0.25);
+		}
+
+		> a {
+			display: inline-block;
+		}
+	}
+
 	.navbar-nav {
 		> li {
 			> .cta {
