--- a/resources/views/tracks/show.twig
+++ b/resources/views/tracks/show.twig
@@ -4,12 +4,16 @@
 
 {% block content %}
 	{% for rating in track.ratings %}
-		<div class="media">
-			<div class="media-left">
-				{{ rating.user.name }}
-			</div>
+		<div class="media rating">
+			<figure class="media-left">
+				<img class="img-circle" src="{{ rating.user.avatar() }}" alt="" />
+				<figcaption>
+					{{ rating.user.name }}<br>
+					<time datetime="{{ rating.created_at }}">{{ rating.created_at.diffForHumans() }}</time>
+				</figcaption>
+			</figure>
 			<div class="media-body">
-				<table class="table table-bordered table-condensed rating">
+				<table class="table table-bordered table-condensed">
 					<thead>
 					<tr>
 						<th>Plateform</th>
