--- a/resources/views/_layouts/global.twig
+++ b/resources/views/_layouts/global.twig
@@ -10,7 +10,7 @@
 
 	<main class="container {{ body_classes }}">
 		<header class="page-header">
-			<h1>{{ title }}</h1>
+			<h1>{{ title|raw }}</h1>
 		</header>
 
 		{% block content %}{% endblock %}
