--- a/resources/views/ratings/edit.twig
+++ b/resources/views/ratings/edit.twig
@@ -22,14 +22,15 @@
 
 		<fieldset>
 			<legend>Ratings</legend>
-			{{ Former.select('tone', 'Tones quality').options(ratings) }}
-			{{ Former.select('audio', 'Track quality').options(ratings) }}
-			{{ Former.select('tab', 'Tab quality').options(ratings) }}
+			{{ Former.select('tone', 'Tones quality').options(ratings).help('The quality of the custom tones used in the track') }}
+			{{ Former.select('audio', 'Audio quality').options(ratings).help('The audio quality of the track itself') }}
+			{{ Former.select('tab', 'Tab quality').options(ratings).help('The quality of the notes highway: are the correct techniques used, is the tablature correct, etc') }}
 		</fieldset>
 
 		<fieldset>
 			<legend>Notes</legend>
-			{{ Former.select('plateform').options(plateforms, null, true) }}
+			<p class="alert alert-warning">Do not rate the music itself, the point is to rate the CDLC, your musical tastes should not be taken into account.</p>
+			{{ Former.select('plateform').options(plateforms) }}
 			{{ Former.textarea('comments', 'Additional comments').rows(15).placeholder('Leaving feedback and explaining you ratings is important. The track will not get better if you never tell what is wrong.') }}
 		</fieldset>
 
