--- a/resources/views/help/about.twig
+++ b/resources/views/help/about.twig
@@ -8,6 +8,12 @@
 		This application in no way aims to replace Ignition, think of it as a complementary tool.
 	</p>
 
+	<h3>What? Why?</h3>
+	<p>
+		Currently Ignition doesn't offer any rating or proper feedback system. When getting into CDLCs, the single only way to discover tracks is to sort by total number of downloads.
+		However that index is not representative at all of the underlying quality of work: a track may have been downloaded 10 times and have 10 people saying it crashes and is missing notes, while a track can be perfect but only have been downloaded one time because... well it's gonna be at the bottom of the table.
+	</p>
+
 	<h3>How can I contribute?</h3>
 	<p>
 		Sources can be found <a href="https://github.com/Anahkiasen/furnace" target="_blank">here</a>.<br>
