--- a/resources/views/_partials/navigation.twig
+++ b/resources/views/_partials/navigation.twig
@@ -1,7 +1,10 @@
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="{{ URL.route('home') }}">Furnace <em>&alpha;lpha</em></a>
+			<a class="navbar-brand" href="{{ URL.route('home') }}">
+				<img src="{{ URL.asset('builds/img/logo.svg') }}" class="logo" />
+				Furnace <em>&alpha;lpha</em>
+			</a>
 		</div>
 
 		<div class="collapse navbar-collapse">
