--- a/resources/views/_layouts/global.twig
+++ b/resources/views/_layouts/global.twig
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>{{ title ? "#{title} - Furnace" : 'Furnace' }}</title>
 	<link rel="stylesheet" href="{{ URL.asset('builds/css/styles.css') }}" />
+	<link rel="shortcut icon" type="image/x-icon" href="{{ URL.asset('builds/img/logo.png') }}" />
 </head>
 <body ng-app="furnace" ng-controller="AppController">
 	{% include '_partials/navigation' %}
