Add link to CHANGELOG

--- a/resources/views/_layouts/_partials/footer.twig
+++ b/resources/views/_layouts/_partials/footer.twig
@@ -1,3 +1,6 @@
 <footer class="layout-footer">
-	&copy;{{ "now"|date('Y') }} - Maxime Fabre - <a href="https://github.com/Anahkiasen/furnace">View sources</a>
+	&copy;{{ "now"|date('Y') }} -
+  Maxime Fabre -
+	<a target="_blank" href="https://github.com/Anahkiasen/furnace">View sources</a> -
+	<a target="_blank" href="http://beta.changehub.io/projects/Anahkiasen/furnace">Changelog</a>
 </footer>
