### Added - Add analytics code

--- a/resources/views/_layouts/global.twig
+++ b/resources/views/_layouts/global.twig
@@ -20,5 +20,6 @@
 	{% include '_layouts/_partials/footer.twig' %}
 
 	<script src="{{ URL.asset('builds/js/scripts.js') }}"></script>
+	{% include '_layouts/_partials/analytics.twig' %}
 </body>
 </html>
