Add My Favorites page

--- a/resources/views/_partials/navigation.twig
+++ b/resources/views/_partials/navigation.twig
@@ -26,6 +26,7 @@
 						</a>
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="{{ URL.route('ratings.index') }}">My ratings</a></li>
+							<li><a href="{{ URL.route('favorites.index') }}">My favorites</a></li>
 							<li><a href="{{ URL.route('auth.logout') }}">Logout</a></li>
 						</ul>
 					</li>
