--- a/resources/views/_macros/table.twig
+++ b/resources/views/_macros/table.twig
@@ -22,5 +22,7 @@
 {% endmacro %}
 
 {% macro favorite(user, favoritable) %}
-	<a ng-click="favorite($event)" href="{{ URL.route('api.favorites.store', ['track', favoritable.id]) }}"><i class="glyphicon glyphicon-heart{% if not user.hasFavorited(favoritable) %}-empty{% endif %}"></i></a>
+	<a ng-click="favorite($event)" href="{{ URL.route('api.favorites.store', [favoritable.getClassBasename(), favoritable.id]) }}">
+		<i class="glyphicon glyphicon-heart{% if not user.hasFavorited(favoritable) %}-empty{% endif %}"></i>
+	</a>
 {% endmacro %}
