--- a/resources/views/ratings/index.twig
+++ b/resources/views/ratings/index.twig
@@ -31,9 +31,9 @@
 			<td>{{ progress(rating.audio, 3) }}</td>
 			<td>{{ progress(rating.tab, 3) }}</td>
 			<td>{{ progress(rating.note, 20) }}</td>
-			<td><a href="{{ URL.route('ratings.edit', rating.id) }}"><i class="glyphicon glyphicon-edit"></i></a></td>
-			<td>{{ favorite(current_user, rating.track) }}</td>
-			<td><a href="{{ URL.route('ratings.destroy', rating.id) }}"><i class="glyphicon glyphicon-remove"></i></a></td>
+			<td class="text-center"><a href="{{ URL.route('ratings.edit', rating.id) }}"><i class="glyphicon glyphicon-edit"></i></a></td>
+			<td class="text-center">{{ favorite(current_user, rating.track) }}</td>
+			<td class="text-center"><a href="{{ URL.route('ratings.destroy', rating.id) }}"><i class="glyphicon glyphicon-remove"></i></a></td>
 		</tr>
 	{% endfor %}
 {% endblock %}
