--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -2,6 +2,7 @@
 @import 'utils/functions';
 
 @import 'base/images';
+@import 'base/code';
 
 @import 'components/buttons';
 @import 'components/table';
