--- a/resources/views/tracks/show.twig
+++ b/resources/views/tracks/show.twig
@@ -4,43 +4,6 @@
 
 {% block content %}
 	{% for rating in track.ratings %}
-		<div class="media rating">
-			<figure class="media-left">
-				<img class="img-circle" src="{{ rating.user.avatar() }}" alt="" />
-				<figcaption>
-					{{ rating.user.name }}<br>
-					<time datetime="{{ rating.created_at }}">{{ rating.created_at.diffForHumans() }}</time>
-				</figcaption>
-			</figure>
-			<div class="media-body">
-				<table class="table table-bordered table-condensed">
-					<thead>
-					<tr>
-						<th>Plateform</th>
-						<th>Presilence</th>
-						<th>Volume</th>
-						<th>Playable</th>
-						<th>Tone</th>
-						<th>Audio</th>
-						<th>Tab</th>
-						<th>Total</th>
-					</tr>
-					</thead>
-					<tr class="text-center">
-						<td>{{ rating.plateform|title }}</td>
-						<td>{{ boolean(rating.presilence) }}</td>
-						<td>{{ boolean(rating.normalized_volume) }}</td>
-						<td>{{ boolean(rating.playable) }}</td>
-						<td>{{ progress(rating.tone) }}</td>
-						<td>{{ progress(rating.audio) }}</td>
-						<td>{{ progress(rating.tab) }}</td>
-						<td>{{ progress(rating.note, rating_scale) }}</td>
-					</tr>
-				</table>
-				{% if rating.comments %}
-					<blockquote>{{ rating.comments }}</blockquote>
-				{% endif %}
-			</div>
-		</div>
+		{% include '_partials/rating.twig' %}
 	{% endfor %}
 {% endblock %}
