--- a/resources/views/_partials/rating.twig
+++ b/resources/views/_partials/rating.twig
@@ -18,6 +18,8 @@
 				<th>Presilence</th>
 				<th>Volume</th>
 				<th>Playable</th>
+				<th>In sync</th>
+				<th>Techniques</th>
 				<th>Tone</th>
 				<th>Audio</th>
 				<th>Tab</th>
@@ -29,6 +31,8 @@
 				<td>{{ boolean(rating.presilence) }}</td>
 				<td>{{ boolean(rating.normalized_volume) }}</td>
 				<td>{{ boolean(rating.playable) }}</td>
+				<td>{{ boolean(rating.sync) }}</td>
+				<td>{{ boolean(rating.techniques) }}</td>
 				<td>{{ progress(rating.tone) }}</td>
 				<td>{{ progress(rating.audio) }}</td>
 				<td>{{ progress(rating.tab) }}</td>
