Fix typo in platform

--- a/resources/views/_partials/rating.twig
+++ b/resources/views/_partials/rating.twig
@@ -14,7 +14,7 @@
 		<table class="table table-bordered table-condensed">
 			<thead>
 			<tr>
-				<th>Plateform</th>
+				<th>Platform</th>
 				<th>Presilence</th>
 				<th>Volume</th>
 				<th>Playable</th>
@@ -27,7 +27,7 @@
 			</tr>
 			</thead>
 			<tr class="text-center">
-				<td>{{ rating.plateform|title }}</td>
+				<td>{{ rating.platform|title }}</td>
 				<td>{{ boolean(rating.presilence) }}</td>
 				<td>{{ boolean(rating.normalized_volume) }}</td>
 				<td>{{ boolean(rating.playable) }}</td>
