--- a/resources/views/help/about.twig
+++ b/resources/views/help/about.twig
@@ -24,10 +24,10 @@
 	<p>Two things are taken into account when computing each CDLC's score:</p>
 	<ol>
 		<li>
-			First, the objective informations of the tracks is gathered and analyzed. How many parts are present? Does it have dynamic difficulty? On how many plateforms is it available, etc.
+			First, the objective informations of the tracks is gathered and analyzed. How many parts are present? Does it have dynamic difficulty? On how many platforms is it available, etc.
 			The point is to emphasis and reward the work and time that was put into the track.<br>
 			You may be opiniated and think nobody needs DD and the Riff Repeater or that only PC is important, but you <em>will</em>
-			get penalized for it – the best CDLC in the world isn't perfect if beginners can't pick it up and try it or that people can't even install it on their plateform without it crashing.
+			get penalized for it – the best CDLC in the world isn't perfect if beginners can't pick it up and try it or that people can't even install it on their platform without it crashing.
 		</li>
 		<li>
 			Secondly, the user's ratings are gathered and averaged into a note. This note is merged with the main one to form a total score on a scale of {{ rating_scale }}.
