--- a/resources/views/ratings/edit.twig
+++ b/resources/views/ratings/edit.twig
@@ -38,7 +38,7 @@
 		<fieldset>
 			<legend>Notes</legend>
 			<p class="alert alert-warning">Do not rate the music itself, the point is to rate the CDLC, your musical tastes should not be taken into account.</p>
-			{{ Former.select('plateform').options(plateforms) }}
+			{{ Former.select('platform').options(platforms) }}
 			{{ Former.textarea('comments', 'Additional comments').rows(15).placeholder('Leaving feedback and explaining you ratings is important. The track will not get better if you never tell what is wrong.') }}
 		</fieldset>
 
