Fix header name

--- a/resources/views/tracks/index.twig
+++ b/resources/views/tracks/index.twig
@@ -16,7 +16,7 @@
 	<th>Pre-silence</th>
 	<th>Playable</th>
 	<th>In sync</th>
-	<th>Playable</th>
+	<th>Techniques</th>
 	<th>Version</th>
 	<th>Tone</th>
 	<th>Track</th>
