--- a/resources/views/ratings/index.twig
+++ b/resources/views/ratings/index.twig
@@ -27,10 +27,10 @@
 			<td>{{ boolean(rating.normalized_volume) }}</td>
 			<td>{{ boolean(rating.presilence) }}</td>
 			<td>{{ boolean(rating.playable) }}</td>
-			<td>{{ progress(rating.tone, 3) }}</td>
-			<td>{{ progress(rating.audio, 3) }}</td>
-			<td>{{ progress(rating.tab, 3) }}</td>
-			<td>{{ progress(rating.note, 20) }}</td>
+			<td>{{ progress(rating.tone, integer_scale) }}</td>
+			<td>{{ progress(rating.audio, integer_scale) }}</td>
+			<td>{{ progress(rating.tab, integer_scale) }}</td>
+			<td>{{ progress(rating.note, rating_scale) }}</td>
 			<td class="text-center"><a href="{{ URL.route('ratings.edit', rating.id) }}"><i class="glyphicon glyphicon-edit"></i></a></td>
 			<td class="text-center">{{ favorite(current_user, rating.track) }}</td>
 			<td class="text-center"><a ng-click="remove($event)" href="{{ URL.route('ratings.destroy', rating.id) }}"><i class="glyphicon glyphicon-remove"></i></a></td>
