--- a/resources/views/_partials/rating.twig
+++ b/resources/views/_partials/rating.twig
@@ -36,7 +36,7 @@
 				<td>{{ progress(rating.tone, integer_scale) }}</td>
 				<td>{{ progress(rating.audio, integer_scale) }}</td>
 				<td>{{ progress(rating.tab, integer_scale) }}</td>
-				<td>{{ progress(rating.note, rating_scale) }}</td>
+				<td>{{ progress(rating.note, rating_scale, true) }}</td>
 			</tr>
 		</table>
 		<blockquote>{{ rating.comments|default('This user did not leave any additional comments.') }}</blockquote>
