Clearer help text

--- a/resources/views/ratings/edit.twig
+++ b/resources/views/ratings/edit.twig
@@ -19,7 +19,7 @@
 			<legend>Experience</legend>
 			{{ Former.boolean('presilence', 'Pre-silence').help('Was the silence at the start of the track long enough?') }}
 			{{ Former.boolean('normalized_volume', 'Tones/track volume').help('Was the volume of the tones correct compared to the track\'s?') }}
-			{{ Former.boolean('playable', 'Playable').help('Do you consider the track playable?') }}
+			{{ Former.boolean('playable', 'Playable').help('Does the track crash? If not do you consider it playable?') }}
 		</fieldset>
 
 		<fieldset>
