Add sorting direction to table headers

--- a/resources/assets/sass/components/_table.scss
+++ b/resources/assets/sass/components/_table.scss
@@ -1,6 +1,32 @@
 .table {
 	font-size: 0.9em;
 
+	th {
+		&:active, &:focus {
+			outline: 0;
+		}
+
+		&.tablesorter-headerAsc,
+		&.tablesorter-headerDesc, {
+			background-color: $color-green;
+			color: white;
+
+			&:hover {
+				background-color: lighten($color-green, 5);
+			}
+		}
+
+		&.tablesorter-headerAsc .tablesorter-header-inner:before {
+			content: '\25B2';
+			margin-right: 0.5rem;
+		}
+
+		&.tablesorter-headerDesc .tablesorter-header-inner:before {
+			content: '\25BC';
+			margin-right: 0.5rem;
+		}
+	}
+
 	.danger td {
 		border-color: $color-red-2;
 	}
