--- a/resources/views/_layouts/table.twig
+++ b/resources/views/_layouts/table.twig
@@ -2,7 +2,7 @@
 {% set body_classes = 'container--wide' %}
 
 {% block content %}
-	<table class="table table-striped table-bordered table-hover" tablesorter>
+	<table class="table table-striped table-bordered table-hover table-condensed" tablesorter>
 		<thead>
 		<tr>
 			{% block headers %}{% endblock %}
