--- a/resources/views/_partials/rating.twig
+++ b/resources/views/_partials/rating.twig
@@ -20,6 +20,7 @@
 				<th>Playable</th>
 				<th>In sync</th>
 				<th>Techniques</th>
+				<th>Difficulty</th>
 				<th>Tone</th>
 				<th>Audio</th>
 				<th>Tab</th>
@@ -33,6 +34,7 @@
 				<td>{{ boolean(rating.playable) }}</td>
 				<td>{{ boolean(rating.sync) }}</td>
 				<td>{{ boolean(rating.techniques) }}</td>
+				<td>{{ Config.get("furnace.difficulties.#{rating.difficulty}") }}</td>
 				<td>{{ progress(rating.tone, integer_scale) }}</td>
 				<td>{{ progress(rating.audio, integer_scale) }}</td>
 				<td>{{ progress(rating.tab, integer_scale) }}</td>
