Use rating scale variable

--- a/resources/views/help/about.twig
+++ b/resources/views/help/about.twig
@@ -49,6 +49,6 @@
 			</tr>
 		{% endfor %}
 	</table>
-	<p>This is then rounded and capped at 20.</p>
+	<p>This is then rounded and capped at {{ rating_scale }}.</p>
 	<p>The code is open source, if you find a better way to compute scores, or have an idea on a criteria that is missing, all suggestions or pull requests are welcome.</p>
 {% endblock %}
