Highlight criteria column

--- a/resources/views/help/about.twig
+++ b/resources/views/help/about.twig
@@ -43,7 +43,7 @@
 		</thead>
 		{% for criteria in criterias %}
 			<tr>
-				<td>{{ criteria.label }}</td>
+				<td class="success">{{ criteria.label }}</td>
 				<td>{{ criteria.notes }}</td>
 				<td class="text-center">{{ progress(criteria.weight, 1) }}</td>
 			</tr>
