--- a/resources/assets/sass/components/_table.scss
+++ b/resources/assets/sass/components/_table.scss
@@ -26,11 +26,13 @@
 		}
 	}
 
-	.danger td {
+	.danger td,
+	td.danger {
 		border-color: $color-red-2;
 	}
 
-	.success td {
+	.success td,
+	td.success {
 		background-color: rgba($color-green, 0.1) !important;
 
 		&, a {
