--- a/resources/views/tracks/index.twig
+++ b/resources/views/tracks/index.twig
@@ -72,7 +72,7 @@
 				<td class="text-center">{{ favorite(current_user, track) }}</td>
 			{% endif %}
 			<td class="text-center">
-				<a href="{{ URL.route('tracks.show', track.id) }}"><i class="glyphicon glyphicon-eye-open"></i></a>
+				<a href="{{ URL.route('tracks.show', track.slug) }}"><i class="glyphicon glyphicon-eye-open"></i></a>
 			</td>
 		</tr>
 	{% endfor %}
