--- a/resources/views/users/index.twig
+++ b/resources/views/users/index.twig
@@ -13,7 +13,7 @@
 			<td>{{ user.name }}</td>
 			<td>{{ user.ratings.count() }}</td>
 			<td class="text-center">
-				<a href="{{ URL.route('users.show', user.id) }}"><i class="glyphicon glyphicon-eye-open"></i></a>
+				<a href="{{ URL.route('users.show', user.slug) }}"><i class="glyphicon glyphicon-eye-open"></i></a>
 			</td>
 		</tr>
 	{% endfor %}
