--- a/resources/views/_layouts/global.twig
+++ b/resources/views/_layouts/global.twig
@@ -7,7 +7,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="{{ URL.asset('builds/img/logo.png') }}" />
 </head>
 <body ng-app="furnace" ng-controller="AppController">
-	{% include '_partials/navigation' %}
+	{% include '_layouts/_partials/navigation' %}
 
 	<main class="container {{ body_classes }}">
 		<header class="page-header">
