--- a/resources/views/users/recommendations.twig
+++ b/resources/views/users/recommendations.twig
@@ -1,7 +1,2 @@
-{% extends '_layouts/table.twig' %}
-{% from '_macros/table.twig' import progress, boolean, favorite %}
+{% extends 'tracks/index.twig' %}
 {% set title = 'My recommendations' %}
-
-{% block headers %}
-
-{% endblock %}
